css/equal.css
/* ... */
.sb-view {
    position: relative;
    height: 100%;
    user-select: none;
}

.sb-view .mdc-snackbar {
    justify-content: left;
}

.sb-view .mdc-snackbar__action:not(:disabled) {
    color: #ff4081;;
}

.sb-view-layout-list {
    /* height must be decremented by height of other elements from parent (header and footer) */
    height: calc(100% - 112px);
    padding: 0 12px 6px 12px;
}

.sb-view.header-inline .sb-view-layout-list {
    height: calc(100% - 56px);
}

.sb-view-dashboard-row .sb-view-layout-list {
    height: calc(100% - 66px) !important;
    padding: 0 !important;
}

.sb-view-layout-list .sb-widget-cell .sb-widget-mode-view {
    padding-right: 16px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.sb-view-layout-form {
    /* height must be decremented by height of other elements from parent (header and footer) */
    height: calc(100% - 56px);
    padding-bottom: 10px;
}

/* added for WP compliance */
.sb-view-layout-form .sb-widget.sb-widget-mode-view input {
    background: transparent;
    border-color: transparent;
}

/* added for WP compliance */
.sb-view .sb-widget input {
    box-shadow: none;
}

.sb-view .sb-widget label {
    user-select: none;
}

/* added for WP compliance */
.sb-view-layout-form .sb-widget input {
    border: 0;
    padding: 0;
}


.sb-view-list-inline-actions-button {
    transform: scale(0.7);
}

.sb-layout {
    position: relative;
    height: calc(100% - 15px);
}


.sb-view .sb-view-dialog .mdc-dialog__surface {
    min-width: 450px;
    width: 450px;
    max-width: 450px;
}

.sb-view .sb-view-dialog .dialog-select {
	margin-bottom: 12px;
}

.sb-view-layout-list table th {
    cursor: pointer;
    user-select: none;
    position: sticky;
    top: 0;
    z-index: 3;
}

.sb-view-layout-list table th.sortable.hover {
    background-color: #f0f0f0;
}

.sb-view-layout-list table th.sorted {
    color: black;
}

.sb-view-layout-list table th.asc::after, .sb-view-layout-list table th.desc::after {
    position: absolute;
    top: 10px;
    right: 10px;
    margin-left: 6px;
    font-family: FontAwesome;
    opacity: 0.3;
}

.sb-view-layout-list table th.asc::after {
    content: "\f0d7";
}

.sb-view-layout-list table th.desc::after {
    content: "\f0d8";
}

.sb-view-layout-list table tr {
    cursor: pointer;
}

.sb-view-layout-list .sb-view-layout-list-empty-row {
    cursor: default;
}

.sb-view-layout-list .sb-view-layout-list-empty-cell {
    padding: 30px 20px;
    text-align: center;
    border-bottom-style: none;
}

.sb-view-layout-list .sb-view-layout-list-empty-message {
    color: rgba(0, 0, 0, .6);
    font-style: italic;
}

.sb-view-layout-list .table-operations {
    display: block;
    width: 100%;
    /* adjust width with scrollbar width */
    padding-right: 6px;
    border-top: solid 1px rgba(0, 0, 0, .12);
}

.sb-view-layout-list .table-operations .operation {
    min-height: 44px;
}

.sb-view-layout-list .table-operations .operation .operation-title {
    text-transform: uppercase;
    width: 100%;
    text-align: left;
    font-weight: 600;
}

.sb-view-layout-list .table-operations .operation .operation-row {
    display: flex;
    justify-content: space-between;
    width: 100%;
    min-height: 44px;
}

/* specific to the first cell/column of a row (e.g. "Total") */
.sb-view-layout-list .table-operations .operation .operation-row .operation-cell:first-child {
    padding-left: 12px;
}

.sb-view-layout-list .table-operations .operation .operation-row .operation-cell {
    padding: 12px 2px 12px 2px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    font-weight: 500;
    border-bottom: 0;
}

.sb-view-header-list {
    position: relative;
    min-height: 66px;
    max-height: 112px;
}

.sb-view-header-list.has-advanced-filters {
    max-height: unset;
}

.sb-view-header-list-actions {
    margin-left: 12px;
    max-height: 56px;
}

.sb-view.header-inline .sb-view-header-actions {
    /* #memo - do not use display none, to preserve top padding */
    /* #memo - inline layout does not imply no actions on view */
    /* visibility: hidden; */
}

.sb-view-header-list-actions button {
    margin-right: 12px;
}

.sb-view-header-list-actions-selected {
    position: relative;
    display: flex;
}

/* todo: improve this (add a custom class)*/
.sb-view-header-list-actions-selected .mdc-button__label {
    padding-right: 10px;
}

.sb-view-header-list-actions-selected .mdc-button__label::after {
    content: "\f0d7";
}

.sb-view-header-list-actions-selected .mdc-button__label::after {
    position: absolute;
    margin-left: 6px;
    font-family: FontAwesome;
    opacity: 0.5;
}

.sb-view-header-list-navigation {
    height: 56px;
    line-height: 56px;
    display: flex;
    margin-left: 12px;
}


.sb-view-header-list .sb-view-header-advanced {
    display: none;
}

.sb-view-header-list.has-advanced-filters .sb-view-header-advanced {
    position: absolute;
    display: block;
    left: 12px;
    margin-top: 4px;
}

.sb-view-header-list.has-advanced-filters .sb-view-header-advanced .sb-view-header-advanced-layout {
    display: none;
}

.sb-view-header-list.is-advanced-open .sb-view-header-advanced .sb-view-header-advanced-layout {
    display: block;
    width: calc(100% - 60px);
    margin-left: 48px;
    margin-top: -12px;
}

.sb-view-header-list.is-advanced-open .sb-view-header-advanced {
    position: relative;
}

.sb-view-header-list.is-advanced-open .sb-view-header-advanced .sb-view-header-list-advanced-filters-button {
    transform: rotate(-90deg);
    transform-origin: bottom left;
    position: absolute;
    left: 48px;
    margin-top: 12px;
}

.sb-view-header-list-filters {
    margin-top: 4px;
}

.sb-view-header-list.has-advanced-filters .sb-view-header-list-filters {
    margin-left: 48px;
}

.sb-view-header-list-filters .sb-view-header-list-filters-menu {
    min-width: 250px;
}


.sb-view-header-list-filters-search .mdc-text-field {
    height: 36px;
}
/* ... */

